--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,16 @@
 ﻿cmake_minimum_required(VERSION 3.17)
-project(NIU)
-
+project(untitled)
 set(CMAKE_CXX_STANDARD 17)
-
 if (WIN32)
     add_compile_options(/wd4819)#忽略保存为unicode警告
 endif ()
-
 include(CMakeLists.txt.glfw)
-include_directories("depends")
-#源代码文件
 
-add_executable(untitled main.cpp ${glfw_sources} texture2d.cpp renderer/mesh_filter.cpp renderer/shader.cpp renderer/mesh_filter.cpp)
+#头文件目录
+include_directories("depends")
+include_directories("source")
+
+file(GLOB_RECURSE rttr_cpp "depends/rttr/*.cpp")
+file(GLOB_RECURSE source_src "source/*.cpp")
+
+add_executable(untitled ${glfw_sources} ${rttr_cpp} ${source_src})
