--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,14 @@
 ﻿cmake_minimum_required(VERSION 3.17)
 project(untitled)
+
 set(CMAKE_CXX_STANDARD 17)
+
 if (WIN32)
     add_compile_options(/wd4819)#忽略保存为unicode警告
 endif ()
+
 include(CMakeLists.txt.glfw)
+include(CMakeLists.txt.FreeType)
 
 #头文件目录
 include_directories("depends")
@@ -14,4 +18,6 @@ file(GLOB_RECURSE rttr_cpp "depends/rttr/*.cpp")
 file(GLOB_RECURSE engine_cpp source/*.cpp)
 file(GLOB_RECURSE example_cpp example/*.cpp)
 
-add_executable(untitled ${glfw_sources} ${rttr_cpp} ${engine_cpp} ${example_cpp})
+add_executable(untitled ${glfw_sources} ${rttr_cpp} ${freetype_src} ${engine_cpp} ${example_cpp})
+
+
